<resources>
    <string name="app_name">FindToTo</string>
    <string name="file_not_exist">"address.xls" 파일이 없습니다.</string>
    <string name="permission_not_exist">스토리지 접근권한이 없습니다.</string>
    <string name="market_title_label">상호</string>
    <string name="market_category_label">업태</string>
    <string name="market_msi_code_label">MSI: %d</string>
    <string name="address_label">주소</string>
    <string name="title_activity_maps">ToTo</string>
    <string name="close_content">앱을 종료하시겠습니까?</string>
    <string name="agree">예</string>
    <string name="disagree">아니오</string>
    <string name="screen_shot_dir_failed">캡처 폴더생성을 실패하였습니다.</string>
    <string name="screen_shot_failed">화면캡처를 실패하였습니다.</string>
    <string name="screen_shot_sucessed">화면캡처를 성공하였습니다.</string>
    <string name="gps_off">GPS 설정이 활성화되지 않았습니다.</string>
    <string name="check_file">\n파일을 확인해보세요.</string>
    <string name="empty_address_result">주소가 없습니다.</string>
    <string name="map_address_timeout">구글에서 위치정보 가져오기를 실패했습니다.\n디바이스를 재부팅 후에 재시도 해주세요!!!</string>
    <string name="empty_search_request">검색어가 없습니다.</string>
    <string name="empty_search_result">검색결과가 없습니다.</string>
    <string name="empty_select_result">항목을 찾을 수 없습니다.</string>
    <string name="empty_id_select_result">항목ID을 찾을 수 없습니다.</string>
    <string name="invalid_address_convert">주소위치를 찾을 수 없습니다.</string>
    <string name="add_ok">추가되었습니다.</string>
    <string name="modify_ok">수정되었습니다.</string>
    <string name="delete_ok">삭제되었습니다.</string>
    <string name="command_failed">실패하였습니다.</string>
    <string name="screenshot_failed">화면캡처를 실패하였습니다.</string>
    <string name="focus_ok">해당 지도위치로 이동합니다.</string>
    <string name="save_ok">목록을 파일에 저장하는데 성공하였습니다.</string>
    <string name="list_empty">저장할 목록이 없습니다.</string>
    <string name="save_fail">목록을 파일에 저장하는데 실패하였습니다.</string>
    <string name="gps_receive_off">GPS 수신을 차단합니다.</string>
    <string name="gps_receive_on">GPS 수신을 받습니다.</string>
    <string name="app_version_label">앱버전</string>
    <string name="refresh_map_datafile">새로고침</string>
    <string name="app_version">앱버전: %s</string>
    <string name="no_remove_marker">삭제할 마커가 없습니다.</string>
    <string name="init_main_circle_radius">메인서클 범위를 200m로 초기화합니다.</string>
    <string name="copy_temp_address">임시 마커주소를 복사했습니다.</string>
    <string name="error_crash">앱이 비정상 종료되었습니다. 비정상 종료 원인파악을 위해 메일을 보내주세요~!</string>
    <string name="add_content">데이터를 추가하시겠습니까?</string>
    <string name="modify_content">데이터를 수정하시겠습니까?</string>
    <string name="del_content">데이터를 삭제하시겠습니까?</string>
    <string name="main_circle_label">범위(m): </string>
    <string name="main_circle_radius">200</string>
    <string name="save_position_list_to_file">위치목록을 엑셀파일에 저장합니다</string>
    <string name="name_label">판매점명</string>
    <string name="biz_label">업태</string>
    <string name="chanel_label">채널구분</string>
    <string name="address_label1">주소(시/도)</string>
    <string name="address_label2">주소(구/군)</string>
    <string name="address_label3">주소(동)</string>
    <string name="address_label4">주소(번지)</string>
    <string name="address_label5">주소(번지)2</string>
    <string name="state_label">판매점상태</string>
    <string name="phone_label">전화번호</string>
    <string name="contry_label">대한민국</string>
    <string name="search_text">검색</string>
    <string name="add_text">추가</string>
    <string name="delete_text">삭제</string>
    <string name="modify_text">수정</string>
    <string name="position_text">위치</string>
    <string name="selection_text">선택</string>
    <string name="none">없음</string>
    <string name="korea">대한민국</string>
    <string name="position_list_title">위치목록</string>
    <string name="demo_title">Google Maps API Demos</string>
    <string name="legal_info">Legal Info</string>
    <string name="no_demos">No demos</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
    <string name="alpha">Alpha</string>
    <string name="animate">Animate</string>
    <string name="basic_map_demo_label">Basic Map</string>
    <string name="basic_map_demo_description">Launches a map.</string>
    <string name="buildings">Buildings</string>
    <string name="camera_demo_label">Camera</string>
    <string name="camera_demo_description">Demonstrates camera functions.</string>
    <string name="circle_demo_label">Circles</string>
    <string name="circle_demo_description">Demonstrates how to add Circles to a map.</string>
    <string name="camera_clamping_demo_label">Camera Clamping</string>
    <string name="camera_clamping_demo_description">Demonstrates how to constrain the camera to specific boundaries and zoom levels.</string>
    <string name="clamp_latlng_adelaide">Clamp to Adelaide</string>
    <string name="clamp_latlng_pacific">Clamp to Pacific</string>
    <string name="clamp_latlng_reset">Reset LatLng Bounds</string>
    <string name="clamp_min_zoom">MinZoom++</string>
    <string name="clamp_max_zoom">MaxZoom--</string>
    <string name="clamp_zoom_reset">Reset Zoom Bounds</string>
    <string name="clear_map">Clear</string>
    <string name="clickable">Clickable</string>
    <string name="color">Color</string>
    <string name="compass">Compass</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="duration">Custom Duration</string>
    <string name="events_demo_label">Events</string>
    <string name="events_demo_description">Demonstrates event handling.</string>
    <string name="fade_in">Fade In Tiles</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="flat">Flat</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_santorini">Go to Santorini</string>
    <string name="go_to_sydney">Go to Sydney</string>
    <string name="ground_overlay_demo_label">Ground Overlays</string>
    <string name="ground_overlay_demo_description">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="hue">Hue</string>
    <string name="hybrid">Hybrid</string>
    <string name="indoor">Indoor</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
    <string name="layers_demo_label">Layers</string>
    <string name="layers_demo_description">Demonstrates the different map layers.</string>
    <string name="left_arrow">\u2190</string>
    <string name="location_source_demo_label">Location Source Demo</string>
    <string name="location_source_demo_description">Demonstrates how to use a custom location source.</string>
    <string name="map_circle_description">Google Map with circles.</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="map_in_pager_demo_label">Map In Pager</string>
    <string name="map_in_pager_demo_description">Demonstrates how to add a map to a ViewPager.</string>
    <string name="marker_demo_label">Markers</string>
    <string name="marker_close_info_window_on_retap_demo_label">Marker Close Info Window on Retap</string>
    <string name="marker_close_info_window_on_retap_demo_description">Demonstrates how to close the info window when the currently selected marker is retapped.</string>
    <string name="marker_demo_description">Demonstrates how to add Markers to a map.</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="multi_map_demo_label">Multiple Maps</string>
    <string name="multi_map_demo_description">Demonstrates how to show multiple maps in a single activity.</string>
    <string name="my_location">My Location</string>
    <string name="my_location_demo_label">My Location Demo</string>
    <string name="my_location_demo_description">Demonstrates how to use GMS Location.</string>
    <string name="mylocation_button">My Location Button</string>
    <string name="mylocation_layer">My Location Layer</string>
    <string name="none_map">None</string>
    <string name="normal">Normal</string>
    <string name="options_demo_label">Options</string>
    <string name="options_demo_description">Demonstrates how to use Options to initialize a map.</string>
    <string name="polygon_demo_label">Polygons</string>
    <string name="polygon_demo_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polyline_demo_label">Polylines</string>
    <string name="polyline_demo_description">Demonstrates how to add Polylines to a map.</string>
    <string name="programmatic_demo_label">Programmatically add map</string>
    <string name="programmatic_demo_description">Demonstrates how to add a MapFragment programmatically.</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="properties_australia_polyline">Properties for Polyline over Australia</string>
    <string name="properties_australia_polygon">Properties for Polygon over Australia</string>
    <string name="rotate">Rotate Gestures</string>
    <string name="raw_map_view_demo_label">Raw MapView</string>
    <string name="raw_map_view_demo_description">Demonstrates how to use a raw MapView.</string>
    <string name="reset_map">Reset</string>
    <string name="retain_map_demo_label">Retain map</string>
    <string name="retain_map_demo_description">Demonstrates how to reuse a MapFragment.</string>
    <string name="right_arrow">\u2192</string>
    <string name="rotation">Rotation:</string>
    <string name="satellite">Satellite</string>
    <string name="save_state_demo_label">Save the state of a MapFragment.</string>
    <string name="save_state_demo_description">Demonstrates how to save the state of a MapFragment upon rotation of the device.</string>
    <string name="save_state_instructions">Drag the marker, tap on it to change its color and rotate the device to check that the state of the map is preserved.</string>
    <string name="scroll">Scroll Gestures</string>
    <string name="snapshot_clear_button">Clear</string>
    <string name="snapshot_demo_label">Snapshot</string>
    <string name="snapshot_demo_description">Demonstrates how to take a snapshot of the map.</string>
    <string name="snapshot_holder_description">Area for the map snapshot.</string>
    <string name="snapshot_take_button">Take snapshot</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_alpha">Stroke Alpha</string>
    <string name="stroke_hue">Stroke Hue</string>
    <string name="stroke_joint_type">Stroke Joint Type</string>
    <string name="stroke_pattern">Stroke Pattern</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="swipe">\u2190 Swipe \u2192</string>
    <string name="switch_image">Switch Image</string>
    <string name="tags_demo_label">Tags</string>
    <string name="tags_demo_description">Demonstrates how to get and set tags on API objects.</string>
    <string name="tags_demo_map_description">Map with a circle, ground overlay, marker, polygon and polyline.</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="terrain">Terrain</string>
    <string name="tile_coordinate_demo_label">Tile Coordinate Overlay</string>
    <string name="tile_coordinate_demo_description">Demonstrates how to add a tile overlay with tile coordinates to a map.</string>
    <string name="tile_overlay_demo_label">Tile Overlays</string>
    <string name="tile_overlay_demo_description">Demonstrates how to add a tile overlay to a map.</string>
    <string name="tilt">Tilt Gestures</string>
    <string name="tilt_less">\u2193</string>
</resources>