<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:src="@drawable/ic_error"
        android:id="@+id/error_image"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_toRightOf="@id/error_image"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/market_title_layout"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/market_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#000000"
                android:text="@string/market_title_label"
                android:textSize="@dimen/title_label"/>

            <TextView
                android:id="@+id/market_title"
                android:layout_width="@dimen/title_length"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:textColor="#000000"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/market_category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#000000"
                android:text="@string/market_category_label"
                android:textSize="@dimen/title_label"/>

            <TextView
                android:id="@+id/market_category"
                android:layout_width="@dimen/title_length"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:textColor="#000000"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/market_title_layout"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/market_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#000000"
                android:text="@string/address_label"
                android:textSize="@dimen/title_label"/>

            <TextView
                android:id="@+id/market_address"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:textColor="#000000"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
